refactor: inject openapi client to frontend client
